# weather_project

./: README.md  app.py  pyproject.toml  requirements.txt
lambda_package/: fetch.py  fetch_00.py  requirements.txt  store.py  store_00.py
lambda_package/boto3-1.36.7.dist-info/: RECORD
lambda_package/botocore-1.36.7.dist-info/: RECORD
lambda_package/charset_normalizer-3.4.1.dist-info/: RECORD
lambda_package/jmespath-1.0.1.dist-info/: RECORD
lambda_package/jsii-1.106.0.dist-info/: RECORD
lambda_package/publication-0.0.3.dist-info/: RECORD
lambda_package/pytest-8.3.4.dist-info/: RECORD
script/: fetch_temperature.py
tests/: fetch_lambda_test.py
tests/unit/: test_weather_project_stack.py
weather_project/: weather_project_stack.py
